syntax = "proto3";

package store;

option go_package = "./proto/store";

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message PutRequest {
	string key = 1; 
	string value = 2; 
}

message PutResponse {
	string key = 1; 
	string value = 2; 
}

message DelRequest {
	string key = 1; 
}

message DelResponse {
	string key = 1; 
	string value = 2; 
}

service StoreService {
	rpc GetHandler(GetRequest) returns (GetResponse);
	rpc PutHandler(PutRequest) returns (PutResponse); 
	rpc DelHandler(DelRequest) returns (DelResponse); 
}
